--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3"
   },
+  "devDependencies": {
+    "prettier": "^2.2.1",
+    "styled-components": "^5.2.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -20,6 +24,12 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true
   },
   "browserslist": {
     "production": [
